src/agent/cli/product/tui_app/src/bottom_pane/snapshots/lha_cli__product__tui_app__bottom_pane__feedback_view__tests__feedback_view_bug.snap
---
source: src/agent/cli/src/../product/tui_app/src/bottom_pane/feedback_view.rs
expression: rendered
---
▌ Tell us more (bug)
▌
▌ (optional) Write a short description to help us further

Press enter to confirm or esc to go back
